setting up starter@

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </script>
 
   <!-- include source files here... -->
-  <script src="lib/p0-c00204958.js"></script>
+  <!-- <script src="lib/p0-c00204958.js"></script> -->
   <script src="src/p0TeamE.js"></script>
 
   <!-- include spec files here... -->
