--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
   <!-- include source files here... -->
   <script src="lib/Real-World-Modelling-Simulation/p0-c00204958/modulo_3.js"></script>
   <script src="lib/RWM/Modulo_First.js"></script>
+  <script src="lib/p0-C00203711/Cube.js"></script>
   <script src="src/p0TeamE.js"></script>
 
   <!-- include test files here... -->
   <script src="lib/Real-World-Modelling-Simulation/p0-c00204958/spec/modulo_3.js"></script>
   <script src="lib/RWM/spec/Modulo_First.js"></script>
+  <script src="lib/p0-C00203711/spec/Cube.js"></script>
   <script src="test/p0TeamE.js"></script>
 
   <script>mocha.run()</script>
