fixed dumb project

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="lib/RWM/Modulo_First.js"></script>
   <script src="lib/p0-C00203711/Cube.js"></script>
   <script src="lib/RealWorldSimY4/p0-C00202505/decrement_if_less_than_first.js"></script>
+  <script src="lib/RealWorldModelling/spec/running_total.js"></script>
   <script src="src/p0TeamE.js"></script>
 
   <!-- include test files here... -->
@@ -29,6 +30,7 @@
   <script src="lib/RWM/spec/Modulo_First.js"></script>
   <script src="lib/p0-C00203711/spec/Cube.js"></script>
   <script src="lib/RealWorldSimY4/p0-C00202505/spec/decrement_if_less_than_first.js"></script>
+  <script src="lib/RealWorldModelling/running_total.js"></script>
   <script src="test/p0TeamE.js"></script>
 
   <script>mocha.run()</script>
