--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="lib/p0-C00203711/Cube.js"></script>
   <script src="lib/RealWorldSimY4/p0-C00202505/decrement_if_less_than_first.js"></script>
   <script src="lib/RealWorldModelling/spec/running_total.js"></script>
+  <script src="lib/p0-c00204864/spec/fact.js"></script>
   <script src="src/p0TeamE.js"></script>
 
   <!-- include test files here... -->
@@ -31,6 +32,7 @@
   <script src="lib/p0-C00203711/spec/Cube.js"></script>
   <script src="lib/RealWorldSimY4/p0-C00202505/spec/decrement_if_less_than_first.js"></script>
   <script src="lib/RealWorldModelling/running_total.js"></script>
+  <script src="lib/p0-c00204864/fact.js"></script>
   <script src="test/p0TeamE.js"></script>
 
   <script>mocha.run()</script>
