implemented functions into main

--- a/index.html
+++ b/index.html
@@ -18,23 +18,29 @@
   </script>
 
   <!-- include source files here... -->
-  <script src="lib/Real-World-Modelling-Simulation/p0-c00204958/modulo_3.js"></script>
-  <script src="lib/RWM/Modulo_First.js"></script>
+  <script src="lib/P0-C00202334/diff.js"></script>
+  <script src="lib/p0-c00203250/xor_21.js"></script>
   <script src="lib/p0-C00203711/Cube.js"></script>
+  <script src="lib/p0-c00204864/fact.js"></script>
+  <script src="lib/p0-c00206244/fizzbuzz.js"></script>
+  <script src="lib/Real-World-Modelling-Simulation/p0-c00204958/modulo_3.js"></script>
+  <script src="lib/RealLifeSim/p0-C00205483/collatz.js"></script>
+  <script src="lib/RealWorldModelling/running_total.js"></script>
   <script src="lib/RealWorldSimY4/p0-C00202505/decrement_if_less_than_first.js"></script>
-  <script src="lib/RealWorldModelling/spec/running_total.js"></script>
-  <script src="lib/p0-c00206244/spec/fizzbuzz.js"></script>
-  <script src="lib/p0-c00204864/spec/fact.js"></script>
+  <script src="lib/RWM/Modulo_First.js"></script>
   <script src="src/p0TeamE.js"></script>
 
   <!-- include test files here... -->
-  <script src="lib/Real-World-Modelling-Simulation/p0-c00204958/spec/modulo_3.js"></script>
-  <script src="lib/RWM/spec/Modulo_First.js"></script>
+  <script src="lib/P0-C00202334/spec/diff.js"></script>
+  <script src="lib/p0-c00203250/spec/xor_21.js"></script>
   <script src="lib/p0-C00203711/spec/Cube.js"></script>
+  <script src="lib/p0-c00204864/spec/fact.js"></script>
+  <script src="lib/p0-c00206244/spec/fizzbuzz.js"></script>
+  <script src="lib/Real-World-Modelling-Simulation/p0-c00204958/spec/modulo_3.js"></script>
+  <script src="lib/RealLifeSim/p0-C00205483/spec/collatz.js"></script>
+  <script src="lib/RealWorldModelling/spec/running_total.js"></script>
   <script src="lib/RealWorldSimY4/p0-C00202505/spec/decrement_if_less_than_first.js"></script>
-  <script src="lib/RealWorldModelling/running_total.js"></script>
-  <script src="lib/p0-c00206244/fizzbuzz.js"></script>
-  <script src="lib/p0-c00204864/fact.js"></script>
+  <script src="lib/RWM/spec/Modulo_First.js"></script>
   <script src="test/p0TeamE.js"></script>
 
   <script>mocha.run()</script>
